[project]
name = "Griptape Nodes Neo4j Nodes Library"
version = "0.1.0"
description = "Library for creating, managing, and querying Neo4j databases from within Griptape Nodes."
authors = [
    {name = "Griptape AI",email = "hello@griptape.ai"}
]
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "griptape-nodes",
]

[tool.uv.sources]
griptape-nodes = { git = "https://github.com/griptape-ai/griptape-nodes", rev="latest"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
